practitioner/demo/kafka-producer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-producer
  labels:
    app: kafka-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-producer
  template:
    metadata:
      labels:
        app: kafka-producer
    spec:
      containers:
      - name: producer
        image: nexweb1/kafka-producer:22
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8060
