practitioner/demo/kafka-producer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-producer
  labels:
    app: kafka-producer
spec:
  ports:
  - port: 8060
    targetPort: 8060
    protocol: TCP
    name: http
  selector:
    app: kafka-producer
  type: LoadBalancer
