practitioner/demo/kafka-producer-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kafka-producer-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-producer
spec:
  hosts:
  - "*"
  gateways:
  - kafka-producer-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kafka-producer
        port:
          number: 8060
